# python-template

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: publish.yml
src/package_name/: __about__.py  __init__.py
tests/: __init__.py  test_version.py
